# parser-parser

./: .gitignore  .tokeignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  SECURITY.md  tutorial.md
.cursor/rules/: ask-before-approach-change.mdc  ask-before-repo-structure.mdc  no-python-file-edits.mdc  parser-erased.mdc
.github/workflows/: ci.yml
benches/: json_parse.rs  json_parse_shared.rs
benches/data/: README.md
examples/: README.md  json.rs  mini_language.rs  mini_script.rs
examples/json/: README.md  grammar.rs  main.rs
examples/mini_language/: README.md  eval.rs  grammar.rs  mod.rs
guide/: 00-overview.md  01-quickstart.md  02-core-concepts.md  03-worked-json-example.md  04-errors-and-recovery.md  05-capture-and-binds.md  06-parser-matcher-reference.md  07-tracing-and-debugging.md  08-common-patterns.md  README.md  _ai-notice.md
macros/: Cargo.toml
macros/src/: lib.rs
marser-trace-schema/: Cargo.toml  README.md
marser-trace-schema/src/: event.rs  io.rs  lib.rs  rule.rs  session.rs  version.rs
marser-trace-schema/tests/: io_roundtrip.rs
marser-trace-viewer/: Cargo.toml  README.md
marser-trace-viewer/src/: app.rs  lib.rs  main.rs  marker_index.rs  outcome.rs  replay.rs  state.rs  ui.rs
marser-trace-viewer/tests/: outcome.rs  replay.rs
scripts/: flamegraph-json-parse.sh
src/: cache.rs  context.rs  grammar.rs  guide.rs  input.rs  label.rs  lib.rs  memo_store.rs  mode.rs  one_of.rs
src/context/: trace_impl.rs
src/error/: error_handler.rs  inline_error.rs  mod.rs  render_annotate.rs
src/grammar/: capture.rs  context.rs  error_handler.rs  label.rs  mod.rs  span.rs
src/grammar/error/: error_handler.rs  mod.rs
src/grammar/matcher/: any_token.rs  commit_matcher.rs  error_contextualizer.rs  insert_on_error.rs  mod.rs  multiple.rs  negative_lookahead.rs  one_of.rs  one_or_more.rs  optional.rs  parser_matcher.rs  positive_lookahead.rs  sequence.rs  string.rs
src/grammar/parser/: deferred.rs  memoized.rs  mod.rs  multiple.rs  one_of.rs  one_or_more.rs  range_parser.rs  recover_error.rs  single_token.rs  token_parser.rs
src/matcher/: any_token.rs  commit_matcher.rs  err_if.rs  error_contextualizer.rs  if_error.rs  ignore_result.rs  insert_on_error.rs  mod.rs  multiple.rs  negative_lookahead.rs  none_of.rs  one_of.rs  one_or_more.rs  optional.rs  parser_matcher.rs  positive_lookahead.rs  runner.rs  sequence.rs  string.rs  to_parser.rs  unwanted.rs
src/parser/: capture.rs  deferred.rs  erase_types.rs  fn_parser.rs  impl_parser.rs  memoized.rs  mod.rs  multiple.rs  one_of.rs  output_mapper.rs  range_parser.rs  recover_error.rs  single_token.rs  token_parser.rs
src/parser/capture/: bound.rs  capture_parser.rs  match_result.rs  mod.rs  property.rs  result_binder.rs  slice_binder.rs  span_binder.rs
src/trace/: context_trace_impl.rs  debug_protocol.rs  load.rs  mod.rs  render_text.rs  traced.rs
tests/: README.md  capture_ui.rs  find_min_stack.py  json_harness.rs  json_suite.rs  json_testsuite.rs  jsonsuite-per-file-matrix.csv  jsonsuite-per-file-summary.txt  memoized_borrow.rs  mini_language_harness.rs  repeated_bind_capture.rs  run_jsonsuite_matrix.py  run_jsonsuite_single.py  trace_harness.rs  trace_viewer_harness.rs
tests/data/: json0.json  json1.json  json2.json  json3.json
tests/data/mini_language/invalid/: type_mismatch_plus.ml  unexpected_semicolons.ml  unknown_function.ml
tests/data/mini_language/valid/: call_and_return.ml  control_flow.ml  fibonacci.ml
tests/data/mini_script/invalid/: hard_bad_expressions.ms  hard_nested_recovery.ms  hard_unknown_statements.ms  recovery_extra_semicolons.ms  recovery_missing_delimiters.ms  recovery_missing_semicolon.ms
tests/data/mini_script/valid/: basics.ms  control_flow.ms  nested_blocks.ms
tests/ui/: capture_macro_smoke.rs  capture_sigil_mismatch.rs  capture_sigil_mismatch.stderr  capture_trailing_tokens.rs  capture_trailing_tokens.stderr  capture_type_mismatch.rs  capture_type_mismatch.stderr  capture_use_binds_in_result.rs  capture_use_binds_in_result.stderr  capture_value_span_same.rs  capture_value_span_same.stderr
