[workspace]
resolver = "2"
members = [
    "macros",
    "marser-trace-schema",
    "marser-trace-viewer",
]

[package]
name = "marser"
version = "0.1.0"
edition = "2024"
authors = ["Arne de Borman"]
description = "Parser combinator toolkit with matcher-level backtracking and rich error reporting."
license = "MIT"
repository = "https://github.com/ArneCode/parser-parser"
readme = "README.md"
documentation = "https://docs.rs/marser"
keywords = ["parser", "combinator", "grammar", "peg", "parsing"]
categories = ["parsing"]
rust-version = "1.85"
exclude = [
    "target/**",
    "tests/JSONTestSuite/**",
    "macros/**",
    "marser-trace-schema/**",
    "marser-trace-viewer/**",
]

[features]
default = []
# Enable trait-object parser type erasure via `ParserCombinator::maybe_erase_types`.
parser-erased = []
# Enable parser event tracing APIs and instrumentation.
parser-trace = ["dep:serde", "dep:serde_json", "dep:marser-trace-schema"]

[dependencies]
annotate-snippets = "0.12.15"
ariadne = "0.6.0"
codespan-reporting = "0.13.1"
marser_macros = { version = "0.1.0", path = "macros" }
marser-trace-schema = { version = "0.1.0", path = "marser-trace-schema", optional = true }
miette = { version = "7", features = ["fancy"] }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
