[package]
name = "marser_macros"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for the marser parser-combinator library."
license = "MIT"
repository = "https://github.com/ArneCode/parser-parser"
readme = "../README.md"
documentation = "https://docs.rs/marser_macros"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full", "visit-mut"] }
