[package]
name = "marser-trace-schema"
version = "0.1.0"
edition = "2024"
description = "JSON trace event schema and serde I/O for marser parser traces."
license = "MIT"
repository = "https://github.com/ArneCode/marser"
readme = "README.md"
rust-version = "1.85"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
