[package]
name = "marser-trace-viewer"
version = "0.1.0"
edition = "2024"
authors = ["Arne de Borman"]
description = "Terminal UI for inspecting marser JSON/JSONL parser traces."
license = "MIT"
repository = "https://github.com/ArneCode/marser"
homepage = "https://github.com/ArneCode/marser"
documentation = "https://docs.rs/marser-trace-viewer"
readme = "README.md"
keywords = ["parser", "tracing", "debugging", "tui"]
categories = ["parsing"]
rust-version = "1.88"

[lib]
name = "marser_trace_viewer"
path = "src/lib.rs"

[[bin]]
name = "marser-trace-viewer"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
marser-trace-schema = { version = "0.1.0", path = "../marser-trace-schema" }
ratatui = "0.28"
